# simdtutor

./: .vim_localrc  .watcher-helper.py  CMakeLists.txt  README.md  main.cpp  process.py  watcher.sh
animations/: .gitignore  daemon.sh  produce.sh  scene.py  scene_epi32.py  scene_ps.py
blas/: dsdot.cpp  sasum.cpp  saxpy.cpp  scopy.cpp  sdot.cpp  snrm2.cpp  srot.cpp
customers/1d_convolution/: CMakeLists.txt  main.cpp
customers/5_calc_similarity/: CMakeLists.txt  avx2.cpp  avx2old.cpp  main.cpp  match_result.txt  new.cpp  old.cpp  realold.cpp  record.txt
customers/8_cuda_omp_accel/: a.out  main.cu
customers/amgcg_vcycle_cuda/: CMakeLists.txt  README.md  cloth3d.py  rec.txt  start_cloth3d.cpp  vcycle.cu
customers/hpc_issue_array_continguous/: .bash_localrc  .gitignore  README.md  bandwidthcalc.py  fast_concat.pyx  fast_concat_lib.hpp  setup.py  speed_test.py  try2butfailed_fast_concat_lib.hpp
customers/issue4_getsubpixelvalue/: main.cpp  old.cpp
customers/issue6_i22convolvefilter/: CMakeLists.txt  main.cpp
customers/issue6_i22filter/: main.cpp
customers/parallel_multiply_uint8/: .gitignore  README.md  fast_mask.pyx  fast_mask_lib.hpp  setup.py  speed_test.py
customers/resize_uninitialized/: README.md
foundation/: CMakeLists.txt  ScopeProfiler.h  dispatch_kernel.h  kernel_hashrng.h  kernel_rgba2rgb.h  main.cpp  simd_print.h  wangshash.h
foundation/clangxraytest/: CMakeLists.txt  main.cpp  run.sh  watch.sh
foundation/cpp14staticstrtest/: main.cpp
foundation/cpp17pmrtest/: CMakeLists.txt  main.cpp  memory_resource_inspector.h  oldmain.cpp  ticktock.h  wangshash.h
foundation/cpp20jthreadtest/: main.cpp
foundation/cppconcepttest/: CMakeLists.txt  main.cpp
foundation/cppcorotest/: main.cpp
foundation/cpplifetimetest/: main.cpp
foundation/cpplocaletest/: .gitignore  README.md  main.cpp  test.txt
foundation/cppmtqueuetest/: main.cpp
foundation/cpprandomtest/: CMakeLists.txt  README.md  main.cpp
foundation/cppstdexperimentalsimd/: CMakeLists.txt  main.cpp  print.h
foundation/cpptagclasstest/: main.cpp
foundation/cpptemplateinstantiate/: CMakeLists.txt  main.cpp  other.cpp  other.h  printer.h
foundation/cppthreadsafetest/: debug.hpp  main.cpp
foundation/cpptypeslides/: README.md
foundation/cpputf8test/: main.cpp
foundation/cppwchartest/: a.txt  b.txt  main.cpp
foundation/decimalfmt/: CMakeLists.txt  decimal.cpp
foundation/lockfreequeue/: CMakeLists.txt  affinity.h  compile_commands.json  lock_free_queue.cpp  spsc_ring.h  spsc_ring_queue.h  v10_local_variable_ring_queue.cpp  v11_ring_queue_template_class.cpp  v12_ring_queue_atomic_wait.cpp  v1_std_mt_queue.cpp  v2_atomic_ring_queue.cpp  v3_atomic_acq_rel_ring_queue.cpp  v4_cache_align_ring_queue.cpp  v5_read_pos_cached_ring_queue.cpp  v6_write_pos_cached_ring_queue.cpp  v7_rw_pos_localize_ring_queue.cpp  v8_pointer_atomic_ring_queue.cpp  v9_do_while_ring_queue.cpp
foundation/loserhomework/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  main.cpp
foundation/radixsort/: CMakeLists.txt  radix_sort.cpp  show_time.h
foundation/ringbuf/: CMakeLists.txt  ring_buffer.cpp  spsc_ring_queue.h
foundation/stulistbugtest/: CMakeLists.txt  main.cpp
practices/: dispatch.md  transpose_rgba_to_rgb.md  u8rgba2rgb.md
result/: countp.cpp  fillsin.cpp  filterp.cpp  findp.cpp  imagemask.cpp  rgba2rgb.cpp  saxpy.cpp  sum.cpp
source/: countp.cpp  fillsin.cpp  findp.cpp  imagemask.cpp  rgba2rgb.cpp  saxpy.cpp  sum.cpp
vtune/: Dockerfile  attach.sh  build.sh  run.sh
